# bookStore

./: Dockerfile  db.sqlite3  docker-compose.yml  env.dev  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py
order/viewsets/: order_viewset.py
product/: admin.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
