[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Daniel Santos <drsantos20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
djangorestframework = "^3.16"
django-extensions = "^3.2"
django-debug-toolbar = "^4.4"
psycopg2-binary = "^2.9"
autopep8 = "^2.2"
flake8 = "^7.1"
isort = "^5.13"
gunicorn = "^22.0"
whitenoise = "^6.7"
gitpython = "^3.1"
django-environ = "^0.11.2"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"